--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>4.2.3.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
